1.8.1/datasheet/domains-contacted-during-installation.md
---
type: page
title: Domains Contacted During Installation
listed: true
description: 
index_title: Domains Contacted During Installation
hidden: false
keywords: 
tags: 
---

During the installation of OPSWAT Filescan Sandbox, the following domains will be contacted:

```
2.0.17.172.in-addr.arpa
a-0016.a-msedge.net
api.nuget.org
apt.postgresql.org
archive.ubuntu.com
auth.docker.io
bootstrap.pypa.io
buildkitsandbox
cs2.wpc.gammacdn.net
current.cvd.clamav.net
d2h67oheeuigaw.cloudfront.net
database.clamav.net
dc.services.visualstudio.com
debian.map.fastlydns.net
dl.fbaipublicfiles.com
docker.io
download.docker.com
download.pytorch.org
files.pythonhosted.org
github.com
google.com
_https._tcp.download.docker.com
_https._tcp.packages.microsoft.com
_http._tcp.apt.postgresql.org
_http._tcp.archive.ubuntu.com
_http._tcp.deb.debian.org
_http._tcp.hu.archive.ubuntu.com
_http._tcp.ppa.launchpad.net
_http._tcp.security.ubuntu.com
hu.archive.ubuntu.com
launchpad.net
mcr.microsoft.com
ntp.ubuntu.com
objects.githubusercontent.com
packages.microsoft.com
ppa.launchpad.net
production.cloudflare.docker.com
pypi.org
raw.githubusercontent.com
registry-1.docker.io
s3-r-w.us-west-2.amazonaws.com
security.ubuntu.com
storage.googleapis.com
time-a-g.nist.gov
time-a.nist.gov
westeurope.data.mcr.microsoft.com
weu010-breeziest-in.cloudapp.net
www.arangodb.com
www.filescan.com
www.google.com
www.postgresql.org
```
